Fix the wrong usages of CSSSelectorList::selectorUsesXXX() functions

It looks that a wrong `selectorIndex` argument is passed to
CSSSelectorList::selectorUsesDeepCombinatorOrShadowPseudo(), and similar functions.

- The clients are passing the index of a *selector* in *selectors*, in the meaning used in the spec.
- The member functions are using this parameter as the index of  CSSSelecorList::m_selectorArray.

They are totally different if a selector list has more than one selectors.

This CL moved all functions to CSSSelector to prevent the wrong usage from happening
in the future. It is error-prone that CSSSelectorList has these functions.

This CL also fixes bug 643316.

BUG=643316

Review-Url: https://codereview.chromium.org/2306903002
Cr-Commit-Position: refs/heads/master@{#416214}

Former-commit-id: 78be6354d3b13dff165e2715957bab3a6d158098